...
        android:layout_marginTop="64dp"
        android:text="Roster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="81dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="48dp"
        android:text="Concessions"
        app:layout_constraintEnd_toEndOf="parent"
...
